[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/Versaille/versaille_bg-min.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/shadow_player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/2.0 - Forest/VersailleHallOfMirrors.gd" type="Script" id=4]
[ext_resource path="res://sprites/Versaille/versaille_flowers-min.png" type="Texture" id=5]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://hitnhurtboxes/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/Versaille/versaille_side_doors-min.png" type="Texture" id=9]
[ext_resource path="res://Levels/2.0 - Forest/the_real_ball.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/L3_forest/vignette_fade.png" type="Texture" id=11]
[ext_resource path="res://sprites/Versaille/versaille_flipped_floor-min.png" type="Texture" id=12]
[ext_resource path="res://Levels/2.0 - Forest/Candelabra_front.tscn" type="PackedScene" id=13]
[ext_resource path="res://Levels/2.0 - Forest/Candelabra_side.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1026.33, 242.324 )

[node name="VersailleHall" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [ -6018.17 ]
}

[node name="ReflectPoint" type="Position2D" parent="."]
position = Vector2( 676, 708 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="back_stage" type="Node2D" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.427451, 0.423529, 0.513726, 1 )
position = Vector2( -1022.81, 144.257 )

[node name="flowers" type="Node2D" parent="ParallaxBackground/ParallaxLayer/back_stage"]
position = Vector2( -90.5096, -84.8528 )

[node name="versaille_flowers-min3" type="Sprite" parent="ParallaxBackground/ParallaxLayer/back_stage/flowers"]
position = Vector2( 2385.95, -119.386 )
texture = ExtResource( 5 )

[node name="versaille_bg-min3" type="Sprite" parent="ParallaxBackground/ParallaxLayer/back_stage"]
position = Vector2( 2274.77, -227.908 )
texture = ExtResource( 1 )

[node name="versaille_flipped_floor-min7" type="Sprite" parent="ParallaxBackground/ParallaxLayer/back_stage"]
position = Vector2( 1928.2, 302.212 )
texture = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 49.0
margin_top = -892.0
margin_right = 1721.0
margin_bottom = -8.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGstuff" type="Node2D" parent="."]
position = Vector2( -1179.18, -1098.58 )

[node name="shadow_player" parent="BGstuff" instance=ExtResource( 3 )]
position = Vector2( 1781.31, 1685.33 )

[node name="versaille_flowers-min6" type="Sprite" parent="BGstuff"]
position = Vector2( 2081.03, 1583.33 )
texture = ExtResource( 5 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 605.214, 866.627 )
camera = NodePath("../../PuppyCamera")

[node name="stage" type="Node2D" parent="YSort"]
modulate = Color( 0.705882, 0.65098, 0.67451, 1 )
position = Vector2( -1371.1, 716.271 )

[node name="versaille_bg-min3" type="Sprite" parent="YSort/stage"]
position = Vector2( 2274.77, -227.908 )
texture = ExtResource( 1 )

[node name="the_real_ball" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 1345.85, 1289.43 )
show_top = true

[node name="PuppyCamera" parent="." instance=ExtResource( 6 )]
position = Vector2( 929.997, 677.082 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( 27.7939, -156.075 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1916.14, 1603.57 )

[node name="BottomSP" parent="." instance=ExtResource( 8 )]
position = Vector2( 358.197, 844.977 )

[node name="TopSP" parent="." instance=ExtResource( 8 )]
position = Vector2( 1431.43, 831.914 )

[node name="vignette_fade3" type="Sprite" parent="."]
position = Vector2( 934.48, -274.912 )
rotation = -1.5708
scale = Vector2( -0.479343, 1.02509 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="LEFT" type="ColorRect" parent="."]
margin_left = -1501.74
margin_top = -2121.56
margin_right = 339.263
margin_bottom = 2655.44
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RIGHT" type="ColorRect" parent="."]
margin_left = 1459.98
margin_top = -2080.42
margin_right = 2932.98
margin_bottom = 2888.58
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FG" type="Node2D" parent="."]

[node name="Candelabra_side" parent="FG" instance=ExtResource( 14 )]
position = Vector2( 344.702, 689.36 )

[node name="Candelabra_side2" parent="FG" instance=ExtResource( 14 )]
position = Vector2( 344.702, 909.977 )

[node name="Candelabra_side3" parent="FG" instance=ExtResource( 14 )]
position = Vector2( 1439.7, 689.36 )
scale = Vector2( -1, 1 )

[node name="Candelabra_side4" parent="FG" instance=ExtResource( 14 )]
position = Vector2( 1439.7, 909.977 )
scale = Vector2( -1, 1 )

[node name="versaille_side_doors-min" type="Sprite" parent="FG"]
position = Vector2( 898.939, 336.341 )
texture = ExtResource( 9 )

[node name="Candelabra_front" parent="FG" instance=ExtResource( 13 )]
position = Vector2( 712.764, 336.583 )

[node name="Candelabra_front2" parent="FG" instance=ExtResource( 13 )]
position = Vector2( 1100.26, 336.583 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = -0.00294647
anchor_top = -0.00523772
anchor_right = -0.00294647
anchor_bottom = -0.00523772
margin_left = -2199.81
margin_top = -1254.81
margin_right = 7926.19
margin_bottom = 2706.19
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 1097.18, 331.134 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( -208, 460.983 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]

[editable path="PuppyCamera"]
[editable path="PlayerDetectionZone"]
